--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": ""
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lin-hun/webpack-dev-bash"
+  },
   "dependencies": {
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
