--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-dev-bash",
-  "version": "1.1.3",
+  "version": "1.1.5",
   "description": "a simple package for webpack-dev-server",
   "main": "index.js",
   "scripts": {
@@ -42,5 +42,5 @@
     "webpack-dev-server": "^1.16.2"
   },
   "author": "浮生",
-  "license": "ISC"
+  "license": "MIT"
 }
