--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webpack-dev-bash",
-  "version": "1.2.1",
+  "name": "webpack-react-bash",
+  "version": "1.2.4",
   "description": "a simple package for webpack-dev-server",
   "main": "index.js",
   "scripts": {
@@ -11,36 +11,27 @@
     "url": "https://github.com/lin-hun/webpack-dev-bash"
   },
   "dependencies": {
+    "babel-loader": "^6.2.8",
+    "babel-plugin-react-transform": "^2.0.2",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
-    "del": "^1.2.0",
     "gulp": "gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-changed": "^1.3.0",
-    "gulp-clean": "^0.3.2",
-    "gulp-compass": "^2.0.4",
-    "gulp-concat": "^2.5.2",
-    "gulp-connect": "^2.2.0",
-    "gulp-copy": "0.0.2",
-    "gulp-cssmin": "^0.1.6",
-    "gulp-jshint": "^1.11.2",
-    "gulp-rename": "^1.2.0",
-    "gulp-seajs-transport": "^0.3.1",
-    "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.7",
-    "gulp-xtemplate": "^2.1.0",
     "html-webpack-plugin": "^2.24.1",
-    "jshint-stylish": "^2.0.1",
-    "raw-loader": "^0.5.1",
-    "style-loader": "^0.13.1",
-    "vinyl-named": "^1.1.0",
-    "webpack": "^1.13.3",
-    "xtemplate": "^4.1.3",
     "log4js": "^1.0.1",
     "node-sass": "^3.13.0",
+    "raw-loader": "^0.5.1",
+    "react-transform-catch-errors": "^1.0.2",
+    "redbox-react": "^1.3.3",
     "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
   "author": "浮生",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8"
+  }
 }
