--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-dev-bash",
-  "version": "1.3.8",
+  "version": "1.4.0",
   "description": "a simple package for webpack-dev-server",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
     "del": "^1.2.0",
+    "fusheng-html-webpack-inline-source-plugin": "^0.0.6",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-changed": "^1.3.0",
@@ -31,16 +32,15 @@
     "gulp-xtemplate": "^2.1.0",
     "html-webpack-plugin": "^2.24.1",
     "jshint-stylish": "^2.0.1",
+    "log4js": "^1.0.1",
+    "node-sass": "^3.13.0",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "vinyl-named": "^1.1.0",
     "webpack": "^1.13.3",
-    "xtemplate": "^4.1.3",
-    "log4js": "^1.0.1",
-    "node-sass": "^3.13.0",
-    "sass-loader": "^4.0.2",
     "webpack-dev-server": "^1.16.2",
-    "fusheng-html-webpack-inline-source-plugin": "^0.0.6"
+    "xtemplate": "^4.1.3"
   },
   "author": "浮生",
   "license": "MIT"
