--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-dev-bash",
-  "version": "1.4.4",
+  "version": "1.4.5",
   "description": "build tools",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,10 @@
     "url": "https://github.com/lin-hun/webpack-dev-bash"
   },
   "dependencies": {
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.3.2",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
     "del": "^1.2.0",
@@ -41,13 +45,8 @@
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2",
     "xtemplate": "^4.1.3",
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.3.2"
+    "postcss-loader": "^1.3.3"
   },
   "author": "浮生",
-  "license": "MIT",
-  "devDependencies": {
-    "postcss-loader": "^1.3.3"
-  }
+  "license": "MIT"
 }
