--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-dev-bash",
-  "version": "1.4.9",
+  "version": "1.5.0",
   "description": "build tools",
   "main": "index.js",
   "scripts": {
@@ -38,14 +38,15 @@
     "jshint-stylish": "^2.0.1",
     "log4js": "^1.0.1",
     "node-sass": "^3.13.0",
+    "postcss-loader": "^1.3.3",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.2",
+    "shelljs": "^0.7.7",
     "style-loader": "^0.13.1",
     "vinyl-named": "^1.1.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2",
-    "xtemplate": "^4.1.3",
-    "postcss-loader": "^1.3.3"
+    "xtemplate": "^4.1.3"
   },
   "author": "浮生",
   "license": "MIT"
