--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-dev-bash",
-  "version": "1.5.2",
+  "version": "1.5.3",
   "description": "build tools",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
