--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-dev-bash",
-  "version": "1.5.3",
+  "version": "1.5.5",
   "description": "build tools",
   "main": "index.js",
   "scripts": {
@@ -18,25 +18,10 @@
     "babel-preset-env": "^1.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
-    "del": "^1.2.0",
     "fusheng-html-webpack-inline-source-plugin": "^0.0.6",
     "gulp": "gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-changed": "^1.3.0",
-    "gulp-clean": "^0.3.2",
-    "gulp-compass": "^2.0.4",
-    "gulp-concat": "^2.5.2",
-    "gulp-connect": "^2.2.0",
-    "gulp-copy": "0.0.2",
-    "gulp-cssmin": "^0.1.6",
-    "gulp-jshint": "^1.11.2",
-    "gulp-rename": "^1.2.0",
-    "gulp-seajs-transport": "^0.3.1",
-    "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.7",
-    "gulp-xtemplate": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
-    "jshint-stylish": "^2.0.1",
     "log4js": "^1.0.1",
     "node-sass": "^3.13.0",
     "postcss-loader": "^1.3.3",
@@ -44,10 +29,8 @@
     "sass-loader": "^4.0.2",
     "shelljs": "^0.7.7",
     "style-loader": "^0.13.1",
-    "vinyl-named": "^1.1.0",
     "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2",
-    "xtemplate": "^4.1.3"
+    "webpack-dev-server": "^1.16.2"
   },
   "author": "浮生",
   "license": "MIT"
