--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-dev-bash",
-  "version": "1.5.6",
+  "version": "1.5.8",
   "description": "build tools",
   "main": "index.js",
   "scripts": {
@@ -12,8 +12,9 @@
   },
   "dependencies": {
     "autoprefixer": "^6.7.7",
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
+    "babel-core": "6.x",
+    "babel-loader": "6.x",
+    "babel-preset-react": "6.x",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -29,8 +30,8 @@
     "sass-loader": "^4.0.2",
     "shelljs": "^0.7.7",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "1.x",
+    "webpack-dev-server": "1.x"
   },
   "author": "浮生",
   "license": "MIT"
