--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-dev-bash",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "build tools",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,7 @@
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
-    "fusheng-html-webpack-inline-source-plugin": "^0.0.6",
+    "html-webpack-inline-source-plugin": "0.0.9",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.28.0",
