--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
-    "html-webpack-inline-source-plugin": "0.0.9",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-util": "^3.0.7",
+    "html-webpack-inline-source-plugin": "0.0.9",
     "html-webpack-plugin": "^2.28.0",
     "log4js": "^1.0.1",
     "node-sass": "^3.13.0",
@@ -31,7 +31,8 @@
     "shelljs": "^0.7.7",
     "style-loader": "^0.13.1",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "webpack-parallel-uglify-plugin": "^0.4.2"
   },
   "author": "浮生",
   "license": "MIT"
