--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "sass-loader": "^4.0.2",
     "shelljs": "^0.7.7",
     "style-loader": "^0.13.1",
-    "webpack": "^2.6.1",
+    "webpack": "3.x.x",
     "webpack-dev-server": "^2.4.5",
     "webpack-parallel-uglify-plugin": "^0.4.2"
   },
