--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-dev-bash",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "build tools",
   "main": "index.js",
   "scripts": {
@@ -32,7 +32,8 @@
     "style-loader": "^0.13.1",
     "webpack": "3.x.x",
     "webpack-dev-server": "^2.4.5",
-    "webpack-parallel-uglify-plugin": "^0.4.2"
+    "webpack-parallel-uglify-plugin": "^0.4.2",
+    "extract-text-webpack-plugin": "^3.0.0"
   },
   "author": "浮生",
   "license": "MIT"
