--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "webpack": "3.x.x",
     "webpack-dev-server": "^2.4.5",
     "webpack-parallel-uglify-plugin": "^0.4.2",
-    "extract-text-webpack-plugin": "^3.0.0"
+    "extract-text-webpack-plugin": "^3.0.0",
+    "script-ext-html-webpack-plugin": "^1.8.5",
+    "style-ext-html-webpack-plugin": "^3.4.1"
   },
   "author": "浮生",
   "license": "MIT"
