--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-dev-bash",
-  "version": "2.2.2",
+  "version": "2.2.3",
   "description": "build tools",
   "main": "index.js",
   "scripts": {
@@ -34,5 +34,8 @@
     "extract-text-webpack-plugin": "^3.0.0"
   },
   "author": "浮生",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1"
+  }
 }
